FIX Chevauchement des menus de l'administration avec un facteur de zoom > 100%
FIX Administration : mauvais affichage des caractères spéciaux dans le nom de l'auteur d'un commentaire (contribution bazooka07)
FIX mediasManager.js : fonction callback inactive avec Firefox Quantum
FIX Minification des fichiers CSS du thème de l'admin et du thème par défaut
FIX #303 Récupération des archives d'une année (contribution sudwebdesign)
FIX #220 Problème affichage css thème par défaut
FIX #225 Ajout id à la balise <body> de la page auth.php
FIX #237 urlRewrite et caractère &
FIX #249 ajout clés de traduction russe absentes
FIX #256 plxPlugin::setParam : mauvais test sur le paramètre $type (contribution bazooka07)
FIX #260 Libellé de catégorie "Non classé" non affiché lors de la prévisualisation
FIX #262 Suppression tris inutiles
FIX #289 Ajout de la class noactive par défaut sur les tags (contribution WorldBot)
FIX #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (contribution bazzoka07)

## PLUXML 5.6 (sortie : 05/04/2017) ##

[+] PluCSS 1.2
[+] Contrôle de la force des mots de passe saisis
[+] Protection attaque brute force sur l'écran de connexion à l'administration
[+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
[+] Administration > Paramètres > Plugins : ajout filtre de recherche
[+] Administration > Paramètres > Options d'affichage : Nombre d'articles affichés par page dans les mots clés
[+] Administration : recherche possible à partir de l'identifiant d'un article
[+] Administration : suppression fichier install.php à partir du message d'information
[+] Gestionnaire de médias : affichage des miniatures jpeg
[+] Gestionnaire de médias : copie lien image dans le presse-papier
[+] Gestionnaire de médias : champ de recherche/filtre sur le nom des images
[+] Gestionnaire de médias : renommage fichier
[+] Suppression des doublons dans la saisie des tags des articles